Fixed whitespace issues, removed redundant code

--- a/src/instruments/src/EFB/Ground/Ground.scss
+++ b/src/instruments/src/EFB/Ground/Ground.scss
@@ -113,7 +113,6 @@
 .pushback .stop {
   @apply bg-red-500;
   grid-column: 2 / 3;
-  visibility: visible;
 }
 
 .down-left {
